--- a/app/src/main/res/layout/online.xml
+++ b/app/src/main/res/layout/online.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="在线"
-        android:textSize="50sp"
-        android:textColor="#000000"
+    <Button
+        android:id="@+id/black"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_gravity="center"
+        android:background="@drawable/down" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="227dp"
+        android:layout_height="match_parent"
+        app:srcCompat="@drawable/playtable" />
+
+    <Button
+        android:id="@+id/white"
+        android:background="@drawable/down"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_gravity="center" />
-
 </LinearLayout>
