--- a/app/src/main/res/layout/play.xml
+++ b/app/src/main/res/layout/play.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:src="@drawable/play_normal"/>
-    <TextView
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="对弈"
-        android:textSize="50sp"
-        android:textColor="#000000"
-        android:layout_gravity="center" />
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/tv_player1"
+            android:layout_width="216dp"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:text="用户名1" />
+
+        <TextView
+            android:id="@+id/tv_player2"
+            android:layout_width="212dp"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:text="用户名2" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/table" />
 </LinearLayout>
